
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct tcphdr {unsigned short th_dport; int th_off; int th_flags; int th_win; unsigned long srca; unsigned long dsta; int proto; scalar_t__ th_sum; scalar_t__ zero; void* tcplen; scalar_t__ th_urp; scalar_t__ th_x2; scalar_t__ th_ack; void* th_seq; void* th_sport; } ;
struct TYPE_4__ {unsigned long s_addr; } ;
struct sockaddr_in {unsigned short sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct pseudo {unsigned short th_dport; int th_off; int th_flags; int th_win; unsigned long srca; unsigned long dsta; int proto; scalar_t__ th_sum; scalar_t__ zero; void* tcplen; scalar_t__ th_urp; scalar_t__ th_x2; scalar_t__ th_ack; void* th_seq; void* th_sport; } ;
struct TYPE_6__ {unsigned long s_addr; } ;
struct TYPE_5__ {unsigned long s_addr; } ;
struct ip {int ip_hl; int ip_v; int ip_tos; int ip_ttl; int ip_p; void* ip_len; TYPE_3__ ip_dst; TYPE_2__ ip_src; scalar_t__ ip_sum; scalar_t__ ip_off; void* ip_id; } ;
struct checksum {int tt; int pp; } ;
typedef int s ;
typedef int packet ;
typedef int p ;
typedef int c ;


 int MSG_DONTWAIT ;
 int PF_INET ;
 int getrandportid () ;
 void* htons (int) ;
 scalar_t__ in_cksum (void*,int) ;
 int memcpy (int *,struct tcphdr*,int) ;
 int memset (char**,int ,int) ;
 int ntohs (void*) ;
 int perror (char*) ;
 int sendto (int ,char*,int ,int ,struct sockaddr*,int) ;
 int sox ;

short int
send_syn(unsigned long int src, unsigned long int dst, unsigned short int port)
{
  struct sockaddr_in s;
  struct ip *i;
  struct tcphdr *t;
  struct pseudo p;
  struct checksum c;
  char packet[sizeof(char)*(sizeof(struct ip)+sizeof(struct tcphdr))];
  int tmp;

  s.sin_family = PF_INET;
  s.sin_port = port;
  s.sin_addr.s_addr = dst;

  i = (struct ip *)&packet;
  t = (struct tcphdr *)((int)i+sizeof(struct ip));

  memset(&packet, 0, sizeof(packet));

  i->ip_hl = 5;
  i->ip_v = 4;
  i->ip_tos = 0x08;
  i->ip_len = htons(sizeof(packet));
  i->ip_id = htons(getrandportid());
  i->ip_off = 0;
  i->ip_ttl = 255;
  i->ip_p = 6;
  i->ip_sum = 0;
  i->ip_src.s_addr = src;
  i->ip_dst.s_addr = dst;


  t->th_sport = htons(getrandportid());
  t->th_dport = port;
  t->th_seq = htons(getrandportid());
  t->th_ack = 0;
  t->th_x2 = 0;
  t->th_off = 5;
  t->th_flags = 0x02;
  t->th_win = 65535;
  t->th_urp = 0;
  t->th_sum = 0;

  p.srca = src;
  p.dsta = dst;
  p.proto = 6;
  p.tcplen = htons(sizeof(struct tcphdr));
  p.zero = 0;

  memcpy(&c.pp, &p, sizeof(p));
  memcpy(&c.tt, t, sizeof(struct tcphdr));

  t->th_sum = in_cksum((void *)&c, sizeof(c));

  tmp = sendto(sox, packet, ntohs(i->ip_len), MSG_DONTWAIT, (struct sockaddr *)&s, sizeof(s));
  if(tmp == -1){
    perror("sendto");
    return(-1);
  }

  return 0;
}
